MAJOR - remove part 1, BaseLayout instructions

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -11,33 +11,31 @@ import FileTree from '~/components/FileTree.astro';
 
 [Builder.io](https://www.builder.io/) is a visual CMS that supports drag and drop content editing for building web sites.
 
-At the end of this recipe you'll be able to create content in Builder's editor, and have your Astro site fetch this content automatically at build time using a webhook.
+At the end of this recipe you'll be able to create blog posts in Builder's visual editor and have your Astro site fetch this content automatically at build time using a webhook.
 
-## Integrating with Astro
-
-In this section, you'll use 2 [Builder's REST APIs](xxx) to connect your Builder space to Astro with zero client-side JavaScript.
+To do this, you'll use 2 [Builder's REST APIs](xxx) to connect your Builder space to Astro with zero client-side JavaScript.
 
 :::note[Other options]
 If You are using a JavaScript framework (e.g. Svelte, Vue, or React) in your Astro project you can use [one of Builder's integrations](xxx).
 :::
 
-### Prerequisites
+## Prerequisites
 
 To get started, you will need to have the following:
 
-* ??? *A basic knowledge of using a code editor / the command line* - You can read a beginner-friendly introduction here [https://www.tatianamac.com/posts/beginner-eleventy-tutorial-partii/#1a.-terminal-emulator]
+* ??? **A basic knowledge of using a code editor / the command line** - You can read a beginner-friendly introduction here [https://www.tatianamac.com/posts/beginner-eleventy-tutorial-partii/#1a.-terminal-emulator]
 
-* ??? *A basic knowledge of REST APIs*
+* ???* *A basic knowledge of REST APIs**
 
 * **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time. 
 
-* **A Builder account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
+* **A Builder account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space. If you already have a space with Builder, feel free to use it, but you will need to modify the code to match the model name and custom data fiels.
 
 * **A Builder API key** - This key will be used when fetching your content from Builder. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
 
-* ??? **A basic understanding of Builder** - specifically [section models](xxx), [custom data fields]() and [the preview URL]().
+* ??? **A basic understanding of Builder** - specifically [section models](xxx), [custom data fields](xxx) and [the preview URL](xxx).
 
-### Setting up credentials
+## Setting up credentials
 
 To add your Builder API key to Astro, create a `.env` file in the root of your project with the following variable:
 
@@ -75,8 +73,28 @@ You could paste the key into your API call directly, but since you'll be making 
 Read more about [using environment variables](/en/guides/environment-variables/) and `.env` files in Astro.
 :::
 
-### Configuring Builder
-Create a model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
+## Making a blog with Astro and Builder
+
+With the set up above, you can now create a blog with Astro and Builder.
+
+### Creating a section model with custom data fields
+
+:::info
+You can also follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
+:::
+
+To create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section` (or go to an existing section model You want to use for this tutorial). A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
+
+In that new model add 2 custom fields by clicking **+ New Custom Field**. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
+
+   - `title` - A required field of the type `text` with the default `_`
+   - `slug` - Again, a required field of the type `text` with the default `_`
+
+The default values don't really matter at this point, but we want to make sure there is always something here, since you'll be relying on this data when building your site.
+
+:::note
+You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
+:::
 
 #### Connecting the Preview URL 
 
@@ -138,128 +156,6 @@ Things can sometimes go wrong when setting up the preview. If the preview doesn'
 * If you're working in a virtual environment like *Stackblitz* or *Gitpod*, you might have to go through this process again when you restart your workspace, since this usually generates a new URL for your project.
 
 For more help, read (Builder's troubleshooting guide)[https://www.builder.io/c/docs/guides/preview-url-working].
-:::
-
-#### Fetching data
-(xxx work on this --- simplify)
-
-To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). In Builder's editor click on **+ Add Block** and add some text. Give the content entry a name (above th editor) and then click **Publish**. 
-
-To display the blocks You just added, fetch their HTML using Builder's API. Your component might look like this:
-
-```astro title="/src/pages/Somepage.astro
----
-    import BaseLayout from "../layouts/BaseLayout.astro";
-
-const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
-const builderModel = 'blogpost'
-
-// Builder's API requires this field but for this use case the url doesn't seem to matter - the API returns the same HTML
-const encodedUrl = encodeURIComponent("moot");
-
-const { html: postHTML } = await fetch(
-    `https://cdn.builder.io/api/v1/qwik/${builderModel}?${new URLSearchParams({
-        apiKey: builderAPIpublicKey,
-        url: encodedUrl,
-        cachebust: "true",
-    }).toString()}`
-)
-    .then((res) => res.json())
-    .catch(
-      // ...catch more errors...
-      );
----
-
-<BaseLayout pageTitle={'somepage'}>
-    <Fragment set:html={postHTML} />
-</BaseLayout>
-```
-
-:::info
-Builder has several APIs and which to use depends on what kind of data You want to fetch
-
-(This assumes that You want to use Builder's REST API as opposed to an integration)
-
-1. If You want to get the blocks that You've added in the Builder editor, use the [QWIK API](xxx). This will give You pre-rendered HTML that you can directly put in your Astro page. (see above)
-
-2. If You want to fetch your content's custom data fields like a post's `title` or `slug`, use Builder's Content API [xxx]. [See a later section of this guide for an example]().
-:::
-
-## Making a blog with Astro and Builder
-
-With the integration set up, you can now create a blog with Astro and Builder.
-
-There are lots of ways to integrate Builder with Astro and structure your content in Builder's CMS. In this guide we'll keep it simple using Builder's REST APIs to fetch our content and a section model representing our blog posts. One use case for this might be if You want to build and manage a website for someone, but give them the power to design their own content using a visual tool like Builder.  
-
-By the end of this guide you'll have a website that
-* ✅ has a base layout, managed with Astro 
-* ✅ has blog posts which can be edited in Builder's visual editor
-* ✅ is totally static with 0 client side JavaScript
-* ✅ automatically updates each time you change something in Builder
-
-### Prerequisites
-
-1. **A Builder space** - For this tutorial, we recommend using a new space. If you already have a space with Builder, feel free to use it, but you will need to modify the code to match the model name and custom data fiels.
-
-2. **An Astro project integrated with a Builder section model** - Follow [the guide above](#integrating-with-astro) to set this up.
-
-
-### Creating A Base Layout
-Create the greater layout in which you'll later embed each blog post:
-
-```astro title='/src/layouts/BaseLayout'
----
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-const { pageTitle } = Astro.props;
----
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{pageTitle}</title>
-    </head>
-    <body>
-        <Header />
-        <h1>{pageTitle}</h1>
-        <slot />
-        <Footer />
-        <script>
-            import "../scripts/menu";
-        </script>
-    </body>
-</html>
-```
-
-This `BaseLayout` is the same as you'd be left with at the end of the [getting started with Astro tutorial](xxx).
-
-The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post in the Builder app in the next step. 
-
-:::note
-This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual editor, while other teams can handle more technical stuff or more perennial content such as the header and footer. 
-
-Experiment with other setups and find one that suits your team's needs!
-:::
-
-### Creating the data model for each blog post
-
-Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
-
-In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section` (or go to an existing section model You want to use for this tutorial). A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
-
-In that new model add 2 custom fields by clicking **+ New Custom Field**. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
-
-   - `title` - A required field of the type `text` with the default `_`
-   - `slug` - Again, a required field of the type `text` with the default `_`
-
-The default values don't really matter at this point, but we want to make sure there is always something here, since you'll be relying on this data when building your site.
-
-:::note
-You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
 :::
 
 ### Creating a blog post
@@ -476,6 +372,73 @@ Now each time You click on the **Publish** button, Builder lets our hosting prov
 ## UNUSED copy
 To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
 * Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
+* The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post in the Builder app in the next step. 
+
+:::note
+This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual editor, while other teams can handle more technical stuff or more perennial content such as the header and footer. 
+
+Experiment with other setups and find one that suits your team's needs!
+:::
+
+* ### Configuring Builder
+Create a model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
+
+* #### Fetching data
+(xxx work on this --- simplify)
+
+To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). In Builder's editor click on **+ Add Block** and add some text. Give the content entry a name (above th editor) and then click **Publish**. 
+
+To display the blocks You just added, fetch their HTML using Builder's API. Your component might look like this:
+
+```astro title="/src/pages/Somepage.astro
+---
+    import BaseLayout from "../layouts/BaseLayout.astro";
+
+const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
+const builderModel = 'blogpost'
+
+// Builder's API requires this field but for this use case the url doesn't seem to matter - the API returns the same HTML
+const encodedUrl = encodeURIComponent("moot");
+
+const { html: postHTML } = await fetch(
+    `https://cdn.builder.io/api/v1/qwik/${builderModel}?${new URLSearchParams({
+        apiKey: builderAPIpublicKey,
+        url: encodedUrl,
+        cachebust: "true",
+    }).toString()}`
+)
+    .then((res) => res.json())
+    .catch(
+      // ...catch more errors...
+      );
+---
+
+<BaseLayout pageTitle={'somepage'}>
+    <Fragment set:html={postHTML} />
+</BaseLayout>
+```
+
+:::info
+Builder has several APIs and which to use depends on what kind of data You want to fetch
+
+(This assumes that You want to use Builder's REST API as opposed to an integration)
+
+1. If You want to get the blocks that You've added in the Builder editor, use the [QWIK API](xxx). This will give You pre-rendered HTML that you can directly put in your Astro page. (see above)
+
+2. If You want to fetch your content's custom data fields like a post's `title` or `slug`, use Builder's Content API [xxx]. [See a later section of this guide for an example]().
+:::
+
+* 
+There are lots of ways to integrate Builder with Astro and structure your content in Builder's CMS. In this guide we'll keep it simple using Builder's REST APIs to fetch our content and a section model representing our blog posts. One use case for this might be if You want to build and manage a website for someone, but give them the power to design their own content using a visual tool like Builder.  
+
+By the end of this guide you'll have a website that
+* ✅ has a base layout, managed with Astro 
+* ✅ has blog posts which can be edited in Builder's visual editor
+* ✅ is totally static with 0 client side JavaScript
+* ✅ automatically updates each time you change something in Builder
+
+
+
 
 ## TODO
 [x] write draft
@@ -486,7 +449,8 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 [x] ask Discord about tone and structure
 [x] read WRITING.md
 [x] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
-* from contentful/ghost: take the prerequisite section about setting up the .env file 
+[x] from contentful/ghost: take the prerequisite section about setting up the .env file 
+[] simplify: remove part 1, give instructions for setting up the preview URL in the blog section
 * from Ghost CMS: take the structure of putting a <FileTree> at the beginning of each section
 * from both: think about mb taking a step-by-step approach to the [slug] section --- 
 [] unify the use of <FileTree>
@@ -498,6 +462,7 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
   [] take out import scripts.js in <Baselayout> 
   [] very first code example --- is <BaseLayout> needed?
   [] sort out the BUILDER_BLOGPOST_MODEL issue
+[] go through the tutorial and test it again
 [] unify tone --- AI, 
 [] fix typos -- AI
 [] revise, simplify, clarify -- AI
