REVISE - polish _creating a model_

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -78,22 +78,30 @@ Read more about [using environment variables](/en/guides/environment-variables/)
 With the set up above, you can now create a blog with Astro and Builder.
 
 ### Creating a section model with custom data fields
+alt: ### Create a model for a blogpost 
 
 :::info
 You can also follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
 :::
 
-To create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section` (or go to an existing section model You want to use for this tutorial). A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
+In the Builder app create the model that will represent a blogpost: go to the **Models** tab and click the **+ Create Model** button to create a model of the "section" type. 
+???A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
 
-In that new model add 2 custom fields by clicking **+ New Custom Field**. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
+Click on the new model and use the **+ New Custom Field** button to create 2 new fields:
 
-   - `title` - A required field of the type `text` with the default `_`
-   - `slug` - Again, a required field of the type `text` with the default `_`
+1. Text field
+    - **Name:** "title"
+    - **Required:** Yes
+    - **Default value** "_"
+    (leave the other parameters as their defaults)
+2. Text field
+    - **Name:** "slug"
+    - **Required:** Yes
+    - **Default value** "_"
+    (leave the other parameters as their defaults)
 
-The default values don't really matter at this point, but we want to make sure there is always something here, since you'll be relying on this data when building your site.
-
-:::note
-You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
+:::caution
+In this guide these fields are required, and later code will break if these fields don't exist or are empty.
 :::
 
 #### Connecting the Preview URL 
@@ -370,9 +378,12 @@ Now each time You click on the **Publish** button, Builder lets our hosting prov
 ---
 
 ## UNUSED copy
+😎 
 To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
-* Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
-* The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post in the Builder app in the next step. 
+😎 
+Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
+😎 
+The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post in the Builder app in the next step. 
 
 :::note
 This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual editor, while other teams can handle more technical stuff or more perennial content such as the header and footer. 
@@ -380,10 +391,12 @@ This is one workflow among many. It demonstrates how You could split up the deve
 Experiment with other setups and find one that suits your team's needs!
 :::
 
-* ### Configuring Builder
+😎 
+### Configuring Builder
 Create a model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
 
-* #### Fetching data
+😎 
+#### Fetching data
 (xxx work on this --- simplify)
 
 To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). In Builder's editor click on **+ Add Block** and add some text. Give the content entry a name (above th editor) and then click **Publish**. 
@@ -428,7 +441,7 @@ Builder has several APIs and which to use depends on what kind of data You want 
 2. If You want to fetch your content's custom data fields like a post's `title` or `slug`, use Builder's Content API [xxx]. [See a later section of this guide for an example]().
 :::
 
-* 
+😎 
 There are lots of ways to integrate Builder with Astro and structure your content in Builder's CMS. In this guide we'll keep it simple using Builder's REST APIs to fetch our content and a section model representing our blog posts. One use case for this might be if You want to build and manage a website for someone, but give them the power to design their own content using a visual tool like Builder.  
 
 By the end of this guide you'll have a website that
@@ -437,7 +450,10 @@ By the end of this guide you'll have a website that
 * ✅ is totally static with 0 client side JavaScript
 * ✅ automatically updates each time you change something in Builder
 
-
+😎 
+:::note
+You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
+:::
 
 
 ## TODO
