--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -84,8 +84,15 @@ alt: ### Create a model for a blogpost
 You can also follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
 :::
 
-In the Builder app create the model that will represent a blogpost: go to the **Models** tab and click the **+ Create Model** button to create a model of the "section" type. 
+In the Builder app create the model that will represent a blogpost: go to the **Models** tab and click the **+ Create Model** button to create model with the following fields and values:
+
+- **Type:** Section
+- **Name:** Blog Post
+- **Description:** This model is for a blog post
+
+:::info
 ???A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
+:::
 
 Click on the new model and use the **+ New Custom Field** button to create 2 new fields:
 
@@ -101,30 +108,38 @@ Click on the new model and use the **+ New Custom Field** button to create 2 new
     (leave the other parameters as their defaults)
 
 :::caution
-In this guide these fields are required, and later code will break if these fields don't exist or are empty.
+This guide relies on these fields to be exactly like this and later code will not run correctly if these fields don't exist, are empty, or the titles misspelled.
 :::
 
-#### Connecting the Preview URL 
+Put the name of the model in the `.env` file for convenience:
+```ini title="/.env" ins={2}
+BUILDER_API_PUBLIC_KEY=YOUR_KEY
+BUILDER_BLOGPOST_MODEL='Blog Post'
+```
+
+### Setting up the Preview URL 
 
 :::info
 If you want to dig in, [read more about the preview URL in the Builder docs](https://www.builder.io/c/docs/html-api#previewing-content-on-your-site).
 :::
 
-To use Builder's drag-and-drop editor, you'll create a page that returns the special `<builder-coponent>`. This component tells Builder where to insert the content from its CMS - it represents the portion of the page that's editable in the Builder app. 
+To use Builder's visual editor, you'll create a page that renders/???returns the special `<builder-component>`. This component tells Builder where to insert the content from its CMS - it represents the portion of the page that's editable in the Builder app. 
 
-In this guide the `<builder-component>` represents the content of a blog post. Accordingly, we wrap it in our `<BaseLayout>` to simulate how it would look on the final page.
+In this guide the `<builder-component>` represents the content of a blog post and the following `builder-preview.astro` files recreates how it will be embedded into the site later on - sitting between a <header> and a <footer>.
 
-1. Create a file named `builder-preview.astro` in your `/pages` folder with the following content:
+### Creating a route for the preview
+1. In your `/src/pages` folder, create a file named `builder-preview.astro`  with the following content:
 
 ```astro title="src/pages/builder-preview.astro"
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-
 const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
 const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 ---
-
-<BaseLayout>
+<html lang="en">
+  <head>
+    <title>Preview for builder.io</title>
+  </head>
+  <body>     
     <header>
       Here be a header
     </header>
@@ -136,20 +151,22 @@ const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
     <footer>
       Here be a footer
     </footer>
-</BaseLayout>
+  </body>     
+</html>
 ```
 
-2. Start your astro project site (e.g. start dev server) and go to the route corresponding to the file you just created. Copy the URL. It might be something like `https://localhost:3000/builder-preview`. The exact URL will depend on your project environment.
+2. Run your Astro project (e.g. start the dev server) and go to the route corresponding to the file you just created. Copy the URL to your clipboard. (It might be something like `https://localhost:3000/builder-preview`. The exact URL will depend on your project environment.)
 
-3. With the URL copied, in your Builder space, go to the **Models** tab, pick the model that you've created and paste it in the **Preview URL** field. Make sure the URL is complete, including the `https` part! 
+3. Go to the **Models** tab in your Builder space, pick the model  you've created and paste the URL from step 2 in the **Preview URL** field. Make sure the URL is complete and includes the protocol, for example `https://`.
 
 :::note
-When you deploy your site, change the preview URL to match your production URL like `https://myBlog.com/builder-preview`.
+When you deploy your site, change the preview URL to match your production URL, for example `https://myAwesomeAstroBlog.com/builder-preview`.
 :::
 
-4. In your Builder space under the **Content** tab, click on **New** to create a new content entry and if a list pops up choose the model you just created.
+#### Creating content to test it 
+1. In your Builder space under the **Content** tab, click on **New** to create a new content entry and if a list pops up choose the "blogpost" model you just created.
 
-5. In the Builder editor that just opened, you should be able to see your site with a big inviting **+ Add Block** in between!
+2. In the Builder editor that just opened, you should be able to see the `builder-preview.astro` page with a big inviting **+ Add Block** in the middle!
 
 [screenshot]xxx
 
@@ -158,12 +175,12 @@ When you deploy your site, change the preview URL to match your production URL l
 
 Things can sometimes go wrong when setting up the preview. If the preview doesn't work, you can try one of the following things:
 
-* Make sure that the routes match exactly - your Astro route and the one in your Builder preview-URL. Watch out for typos!
+* Make sure that the routes match exactly - your Astro route and the one in your Builder preview-URL
 * Make sure you include the full URL including the protocol (like `https://`)
 * Make sure the site is live - your server is running 
-* If you're working in a virtual environment like *Stackblitz* or *Gitpod*, you might have to go through this process again when you restart your workspace, since this usually generates a new URL for your project.
+* If you're working in a virtual environment like *Stackblitz* or *Gitpod*, you might have to copy and paste the URL again when you restart your workspace, since this usually generates a new URL for your project
 
-For more help, read (Builder's troubleshooting guide)[https://www.builder.io/c/docs/guides/preview-url-working].
+For more ideas, read (Builder's troubleshooting guide)[https://www.builder.io/c/docs/guides/preview-url-working].
 :::
 
 ### Creating a blog post
@@ -171,7 +188,7 @@ For more help, read (Builder's troubleshooting guide)[https://www.builder.io/c/d
 // ### Using Builder's Visual Editor
 
 :::caution
-Before You can create new content in Builder, make sure the preview URL for your model is working. See the [instructions](xxx) above. 
+Before You can create new content in Builder, make sure the preview URL for your model is working. See the [instructions](/#Setting-up-the-Preview-URL) above. 
 :::
 
 To add new content, go to the **Content** tab, then click on *+ New* and choose the `blogpost` model You've just created. If You followed the steps under [integrating with Astro] and everything worked, you should see something like this: 
