--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -506,14 +506,14 @@ You can add whatever fields You like. Other popular choices are fields that cont
 [x] read WRITING.md
 [x] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
 [x] from contentful/ghost: take the prerequisite section about setting up the .env file 
-[] simplify: remove part 1, give instructions for setting up the preview URL in the blog section
-* from Ghost CMS: take the structure of putting a <FileTree> at the beginning of each section
-* from both: think about mb taking a step-by-step approach to the [slug] section --- 
+[x] simplify: remove part 1, give instructions for setting up the preview URL in the blog section
+[x] fix the flow of the instructions: in part 2 there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again. also relevant here: simplify the first part by making it a **page** model?
 [] unify the use of <FileTree>
+* from Ghost CMS: take the structure of putting a <FileTree> at the beginning of each section
 [] unify the structure of instructions --- numbering steps or not
+* from both: think about mb taking a step-by-step approach to the [slug] section --- 
 [] give concrete instructions instead of suggestions --- e.g. tell what title and what slug to put in (makes giving instructions simpler later on)
 [] settle on tone and address in terms of you/You/we/let's  
-[] fix the flow of the instructions: in part 2 there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again. also relevant here: simplify the first part by making it a **page** model?
 [] go through code -- AI 
   [] take out import scripts.js in <Baselayout> 
   [] very first code example --- is <BaseLayout> needed?
@@ -526,6 +526,8 @@ You can add whatever fields You like. Other popular choices are fields that cont
 [] add screenshots 
 [] preview site
 [] revise again --- AI
+* dodgy: no 'fetching data section'
+* awkward: some repetition between #### testing it and the next step ### creating a blog post. idea: remove testing it and put create a blog post in its place
 [] write PR --- mention new ideas
 [] ask Discord about squashing commits
 [] add a logo to `/public/logos`? see here: https://github.com/withastro/docs/blob/main/RECIPES.md#cms-deploy-and-migrate
