REVISE: unify const builderModel

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -294,14 +294,14 @@ Then add the following content:
 ---
     import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const builderModel = 'blogpost'
+const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
 
 
 // fetch all posts, just as in the previous step
 // 💥 TO REVIEWER: open to suggestions how to simplify this
 export async function getStaticPaths() {
-  const builderModel = 'blogpost'
+  const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
   const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
 
 
@@ -448,7 +448,7 @@ To display the blocks You just added, fetch their HTML using Builder's API. Your
     import BaseLayout from "../layouts/BaseLayout.astro";
 
 const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
-const builderModel = 'blogpost'
+const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 
 // Builder's API requires this field but for this use case the url doesn't seem to matter - the API returns the same HTML
 const encodedUrl = encodeURIComponent("moot");
@@ -514,10 +514,11 @@ You can add whatever fields You like. Other popular choices are fields that cont
 * from both: think about mb taking a step-by-step approach to the [slug] section --- 
 [] give concrete instructions instead of suggestions --- e.g. tell what title and what slug to put in (makes giving instructions simpler later on)
 [] settle on tone and address in terms of you/You/we/let's  
-[] go through code -- AI 
-  [] take out import scripts.js in <Baselayout> 
-  [] very first code example --- is <BaseLayout> needed?
-  [] sort out the BUILDER_BLOGPOST_MODEL issue
+[] go through code -- AI
+  [] remove <BaseLayout> references
+  [] simplify - destructuring? see also WRITING.md on destructuring props
+  [] tidy up comments 
+  [x] sort out the BUILDER_BLOGPOST_MODEL issue
 [] go through the tutorial and test it again
 [] unify tone --- AI, 
 [] fix typos -- AI
